# movie-rec-engine

./: Dockerfile  README.md  app.py  ingest.py  main.py  pyproject.toml  requirements.txt
movie_db/: chroma.sqlite3
