[project]
name = "movie-rec-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.128.0",
    "groq>=1.0.0",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.39.0",
]

[tool.uv]
python = "3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
